changed BlockImpl into a record