@@ -2,10 +2,8 @@ package pl.awolny.wallstructure.main;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-
-public class Wall implements Structure {
+public class Wall implements Structure{
     private final List<Block> blocks;
 
     public Wall(List<Block> blocks) {
@@ -15,15 +13,15 @@ public class Wall implements Structure {
     @Override
     public Optional<Block> findBlockByColor(String color) {
         return blocks.stream()
-                .filter(block -> block.getColor().equals(color))
+                .filter(block -> block.color().equals(color))
                 .findAny();
     }
 
     @Override
     public List<Block> findBlocksByMaterial(String material) {
         return blocks.stream()
-                .filter(block -> block.getMaterial().equals(material))
-                .collect(Collectors.toList());
+                .filter(block -> block.material().equals(material))
+                .toList();
     }
 
     @Override
